# crypto-address-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
src/: app.py
src/apis/address/: models.py  routers.py  schemas.py
src/lib/coins/: __init__.py  btc.py  eth.py  strategy.py
src/lib/core/: dependancies.py  exceptions.py
src/settings/: database.py  settings.py
tests/unit/apis/address/: __init__.py  routers_test.py
tests/unit/lib/coins/: btc_test.py  eth_test.py
